# django-anymail

./: .editorconfig  .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  ADDING_ESPS.md  AUTHORS.txt  CHANGELOG.rst  CONTRIBUTING.md  MANIFEST.in  Pipfile  README.rst  hatch_build.py  pyproject.toml  requirements-dev.txt  runtests.py  setup.py  tox.ini
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md
.github/workflows/: ci-cd.yml  integration-test.yml  release.yml  test.yml
anymail/: __init__.py  _version.py  exceptions.py  inbound.py  message.py  models.py  signals.py  urls.py  utils.py
anymail/backends/: amazon_ses.py  amazon_sesv2.py  base.py  base_requests.py  mailgun.py  mailjet.py  mandrill.py  postmark.py  sendgrid.py  sendgrid_v2.py  sendinblue.py  sparkpost.py  test.py
anymail/tests/: __init__.py  mock_backend.py  mock_requests_backend.py  test_mailgun_backend.py  test_mailgun_integration.py  test_mandrill_djrill_features.py  test_mandrill_integration.py  test_mandrill_send.py  test_mandrill_send_template.py  test_mandrill_subaccounts.py  test_mandrill_webhook.py  test_postmark_backend.py  test_sendgrid_backend.py  test_sendgrid_integration.py  utils.py
anymail/webhooks/: amazon_ses.py  base.py  mailgun.py  mailjet.py  mandrill.py  postal.py  postmark.py  sendgrid.py  sendinblue.py  sparkpost.py
docs/: conf.py  contributing.rst  docs_privacy.rst  help.rst  inbound.rst  index.rst  installation.rst  quickstart.rst  release_notes.rst  requirements.txt  troubleshooting.rst
docs/_readme/: docutils.cfg  readme.css  render.py  template.txt
docs/_static/: anymail-config.js  anymail-theme.css  version-alert.js
docs/_templates/: layout.html
docs/esps/: amazon_ses.rst  brevo.rst  index.rst  mailersend.rst  mailgun.rst  mailjet.rst  mandrill.rst  postal.rst  postmark.rst  resend.rst  sendgrid.rst  sendinblue.rst  sparkpost.rst
docs/sending/: anymail_additions.rst  django_email.rst  exceptions.rst  index.rst  signals.rst  templates.rst  tracking.rst
docs/tips/: django_templates.rst  index.rst  multiple_backends.rst  performance.rst  securing_webhooks.rst  test_backend.rst  testing.rst  transient_errors.rst
tests/: __init__.py  mock_requests_backend.py  requirements.txt  sample_email.txt  test_amazon_ses_backend.py  test_amazon_ses_backendv1.py  test_amazon_ses_inbound.py  test_amazon_ses_integration.py  test_amazon_ses_integrationv1.py  test_amazon_ses_webhooks.py  test_amazon_sesv2_backend.py  test_amazon_sesv2_integration.py  test_base_backends.py  test_checks.py  test_general_backend.py  test_inbound.py  test_mailersend_backend.py  test_mailersend_inbound.py  test_mailersend_integration.py  test_mailersend_webhooks.py  test_mailgun_backend.py  test_mailgun_inbound.py  test_mailgun_integration.py  test_mailgun_webhooks.py  test_mailjet_backend.py  test_mailjet_inbound.py  test_mailjet_integration.py  test_mailjet_webhooks.py  test_mandrill_backend.py  test_mandrill_djrill_features.py  test_mandrill_inbound.py  test_mandrill_integration.py  test_mandrill_webhooks.py  test_message.py  test_postal_backend.py  test_postal_inbound.py  test_postal_integration.py  test_postal_webhooks.py  test_postmark_backend.py  test_postmark_inbound.py  (+24 more)
tests/test_files/: postmark-inbound-test-payload-with-raw.json  postmark-inbound-test-payload.json
tests/test_settings/: settings_1_10.py  settings_1_11.py  settings_1_8.py  settings_1_9.py  settings_2_0.py  settings_2_1.py  settings_2_2.py  settings_4_1.py  urls.py
